supposed to be by average_price

--- a/labs/lab02/lab_02.ipynb
+++ b/labs/lab02/lab_02.ipynb
@@ -455,12 +455,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "#pivot data so that it shows value and then type?\n",
-    "long_california = california.melt(id_vars=[\"date\", \"total_volume\", \"geography\", \"type\"], value_vars=[\"small_bags\", \"large_bags\", \"xlarge_bags\"], \n",
+    "long_california = california.melt(id_vars=[\"date\", \"average_price\", \"total_volume\", \"geography\", \"type\"], value_vars=[\"small_bags\", \"large_bags\", \"xlarge_bags\"], \n",
     "                            var_name=\"bag_type\", value_name=\"bag_value\")\n",
     "\n",
     "\n",
@@ -474,142 +474,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   geography          type     bag_type  bag_value  total_bag_value  proportion\n",
-      "0         LA  conventional   small_bags         55               72    0.763889\n",
-      "1         LA       organic   small_bags         90              129    0.697674\n",
-      "2         SD  conventional   small_bags         15               23    0.652174\n",
-      "3         SD       organic   small_bags         60               85    0.705882\n",
-      "4         SF  conventional   small_bags         80              117    0.683761\n",
-      "5         SF       organic   small_bags         30               44    0.681818\n",
-      "6         LA  conventional   large_bags         14               72    0.194444\n",
-      "7         LA       organic   large_bags         32              129    0.248062\n",
-      "8         SD  conventional   large_bags          7               23    0.304348\n",
-      "9         SD       organic   large_bags         21               85    0.247059\n",
-      "10        SF  conventional   large_bags         30              117    0.256410\n",
-      "11        SF       organic   large_bags         12               44    0.272727\n",
-      "12        LA  conventional  xlarge_bags          3               72    0.041667\n",
-      "13        LA       organic  xlarge_bags          7              129    0.054264\n",
-      "14        SD  conventional  xlarge_bags          1               23    0.043478\n",
-      "15        SD       organic  xlarge_bags          4               85    0.047059\n",
-      "16        SF  conventional  xlarge_bags          7              117    0.059829\n",
-      "17        SF       organic  xlarge_bags          2               44    0.045455\n",
-      "   geography          type     bag_type  bag_value  total_bag_value  proportion\n",
-      "0         LA  conventional   small_bags         55               72    0.763889\n",
-      "1         LA       organic   small_bags         90              129    0.697674\n",
-      "2         SD  conventional   small_bags         15               23    0.652174\n",
-      "3         SD       organic   small_bags         60               85    0.705882\n",
-      "4         SF  conventional   small_bags         80              117    0.683761\n",
-      "5         SF       organic   small_bags         30               44    0.681818\n",
-      "6         LA  conventional   large_bags         14               72    0.194444\n",
-      "7         LA       organic   large_bags         32              129    0.248062\n",
-      "8         SD  conventional   large_bags          7               23    0.304348\n",
-      "9         SD       organic   large_bags         21               85    0.247059\n",
-      "10        SF  conventional   large_bags         30              117    0.256410\n",
-      "11        SF       organic   large_bags         12               44    0.272727\n",
-      "12        LA  conventional  xlarge_bags          3               72    0.041667\n",
-      "13        LA       organic  xlarge_bags          7              129    0.054264\n",
-      "14        SD  conventional  xlarge_bags          1               23    0.043478\n",
-      "15        SD       organic  xlarge_bags          4               85    0.047059\n",
-      "16        SF  conventional  xlarge_bags          7              117    0.059829\n",
-      "17        SF       organic  xlarge_bags          2               44    0.045455\n"
+      "          geography          type  average_price     bag_type   bag_value  total_bag_value  proportion\n",
+      "0       Los Angeles  conventional           0.53   small_bags  2656630.42           327.24    0.001620\n",
+      "1       Los Angeles  conventional           0.58   small_bags  1911608.83           327.24    0.001772\n",
+      "2       Los Angeles  conventional           0.60   small_bags  1923042.64           327.24    0.001834\n",
+      "3       Los Angeles  conventional           0.62   small_bags  2722062.44           327.24    0.001895\n",
+      "4       Los Angeles  conventional           0.64   small_bags  4184522.49           327.24    0.001956\n",
+      "...             ...           ...            ...          ...         ...              ...         ...\n",
+      "2530  San Francisco       organic           2.94  xlarge_bags        0.00           778.44    0.003777\n",
+      "2531  San Francisco       organic           2.99  xlarge_bags        0.00           778.44    0.003841\n",
+      "2532  San Francisco       organic           3.00  xlarge_bags        0.00           778.44    0.003854\n",
+      "2533  San Francisco       organic           3.12  xlarge_bags        0.00           778.44    0.004008\n",
+      "2534  San Francisco       organic           3.25  xlarge_bags        0.00           778.44    0.004175\n",
+      "\n",
+      "[2535 rows x 7 columns]\n",
+      "          geography          type  average_price     bag_type   bag_value  total_bag_value  proportion\n",
+      "0       Los Angeles  conventional           0.53   small_bags  2656630.42           327.24    0.001620\n",
+      "1       Los Angeles  conventional           0.58   small_bags  1911608.83           327.24    0.001772\n",
+      "2       Los Angeles  conventional           0.60   small_bags  1923042.64           327.24    0.001834\n",
+      "3       Los Angeles  conventional           0.62   small_bags  2722062.44           327.24    0.001895\n",
+      "4       Los Angeles  conventional           0.64   small_bags  4184522.49           327.24    0.001956\n",
+      "...             ...           ...            ...          ...         ...              ...         ...\n",
+      "2530  San Francisco       organic           2.94  xlarge_bags        0.00           778.44    0.003777\n",
+      "2531  San Francisco       organic           2.99  xlarge_bags        0.00           778.44    0.003841\n",
+      "2532  San Francisco       organic           3.00  xlarge_bags        0.00           778.44    0.003854\n",
+      "2533  San Francisco       organic           3.12  xlarge_bags        0.00           778.44    0.004008\n",
+      "2534  San Francisco       organic           3.25  xlarge_bags        0.00           778.44    0.004175\n",
+      "\n",
+      "[2535 rows x 7 columns]\n"
      ]
     }
    ],
    "source": [
     "# Step 1: Reshape the data using `pivot_table` to sum values for each `geography` and `type`\n",
-    "bag_counts = california.groupby(['geography', 'type'])[['small_bags', 'large_bags', 'xlarge_bags']].sum().reset_index()\n",
+    "bag_counts = california.groupby(['geography', 'type', 'average_price'])[['small_bags', 'large_bags', 'xlarge_bags']].sum().reset_index()\n",
     "\n",
     "# Step 2: Melt the grouped data to long format\n",
-    "long_california = bag_counts.melt(id_vars=['geography', 'type'], value_vars=['small_bags', 'large_bags', 'xlarge_bags'],\n",
+    "long_california = bag_counts.melt(id_vars=['geography', 'type', 'average_price'], value_vars=['small_bags', 'large_bags', 'xlarge_bags'],\n",
     "                                  var_name='bag_type', value_name='bag_value')\n",
     "\n",
     "# Step 3: Calculate the total bag value per region to get proportions\n",
-    "long_california['total_bag_value'] = long_california.groupby(['geography', 'type'])['bag_value'].transform('sum')\n",
+    "long_california['total_bag_value'] = long_california.groupby(['geography', 'type'])['average_price'].transform('sum')\n",
     "\n",
     "# Step 4: Calculate the proportion of each bag type within each region\n",
-    "long_california['proportion'] = long_california['bag_value'] / long_california['total_bag_value']\n",
+    "long_california['proportion'] = long_california['average_price'] / long_california['total_bag_value']\n",
     "\n",
     "print(long_california)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "geography      type          bag_type   \n",
-      "Los Angeles    conventional  large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "               organic       large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "Sacramento     conventional  large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "               organic       large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "San Diego      conventional  large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "               organic       large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "San Francisco  conventional  large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "               organic       large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "dtype: int64\n",
-      "geography      type          bag_type   \n",
-      "Los Angeles    conventional  large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "               organic       large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "Sacramento     conventional  large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "               organic       large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "San Diego      conventional  large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "               organic       large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "San Francisco  conventional  large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "               organic       large_bags     306\n",
-      "                             small_bags     306\n",
-      "                             xlarge_bags    306\n",
-      "dtype: int64\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<positron-console-cell-17>:8: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#plot design:\n",
     "\n",
@@ -621,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
