--- a/labs/lab02/lab_02.ipynb
+++ b/labs/lab02/lab_02.ipynb
@@ -474,59 +474,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          geography          type  average_price     bag_type   bag_value  total_bag_value  proportion\n",
-      "0       Los Angeles  conventional           0.53   small_bags  2656630.42           327.24    0.001620\n",
-      "1       Los Angeles  conventional           0.58   small_bags  1911608.83           327.24    0.001772\n",
-      "2       Los Angeles  conventional           0.60   small_bags  1923042.64           327.24    0.001834\n",
-      "3       Los Angeles  conventional           0.62   small_bags  2722062.44           327.24    0.001895\n",
-      "4       Los Angeles  conventional           0.64   small_bags  4184522.49           327.24    0.001956\n",
-      "...             ...           ...            ...          ...         ...              ...         ...\n",
-      "2530  San Francisco       organic           2.94  xlarge_bags        0.00           778.44    0.003777\n",
-      "2531  San Francisco       organic           2.99  xlarge_bags        0.00           778.44    0.003841\n",
-      "2532  San Francisco       organic           3.00  xlarge_bags        0.00           778.44    0.003854\n",
-      "2533  San Francisco       organic           3.12  xlarge_bags        0.00           778.44    0.004008\n",
-      "2534  San Francisco       organic           3.25  xlarge_bags        0.00           778.44    0.004175\n",
-      "\n",
-      "[2535 rows x 7 columns]\n",
-      "          geography          type  average_price     bag_type   bag_value  total_bag_value  proportion\n",
-      "0       Los Angeles  conventional           0.53   small_bags  2656630.42           327.24    0.001620\n",
-      "1       Los Angeles  conventional           0.58   small_bags  1911608.83           327.24    0.001772\n",
-      "2       Los Angeles  conventional           0.60   small_bags  1923042.64           327.24    0.001834\n",
-      "3       Los Angeles  conventional           0.62   small_bags  2722062.44           327.24    0.001895\n",
-      "4       Los Angeles  conventional           0.64   small_bags  4184522.49           327.24    0.001956\n",
-      "...             ...           ...            ...          ...         ...              ...         ...\n",
-      "2530  San Francisco       organic           2.94  xlarge_bags        0.00           778.44    0.003777\n",
-      "2531  San Francisco       organic           2.99  xlarge_bags        0.00           778.44    0.003841\n",
-      "2532  San Francisco       organic           3.00  xlarge_bags        0.00           778.44    0.003854\n",
-      "2533  San Francisco       organic           3.12  xlarge_bags        0.00           778.44    0.004008\n",
-      "2534  San Francisco       organic           3.25  xlarge_bags        0.00           778.44    0.004175\n",
-      "\n",
-      "[2535 rows x 7 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 1: Reshape the data using `pivot_table` to sum values for each `geography` and `type`\n",
-    "bag_counts = california.groupby(['geography', 'type', 'average_price'])[['small_bags', 'large_bags', 'xlarge_bags']].sum().reset_index()\n",
+    "#bag_counts = california.groupby(['geography', 'type', 'average_price'])[['small_bags', 'large_bags', 'xlarge_bags']].sum().reset_index()\n",
     "\n",
     "# Step 2: Melt the grouped data to long format\n",
-    "long_california = bag_counts.melt(id_vars=['geography', 'type', 'average_price'], value_vars=['small_bags', 'large_bags', 'xlarge_bags'],\n",
+    "long_california = california.melt(id_vars=['geography', 'type', 'average_price'], value_vars=['small_bags', 'large_bags', 'xlarge_bags'],\n",
     "                                  var_name='bag_type', value_name='bag_value')\n",
     "\n",
     "# Step 3: Calculate the total bag value per region to get proportions\n",
-    "long_california['total_bag_value'] = long_california.groupby(['geography', 'type'])['average_price'].transform('sum')\n",
+    "long_california['total_bag_value'] = long_california.groupby(['geography', 'type'])['bag_value'].transform('sum')\n",
     "\n",
     "# Step 4: Calculate the proportion of each bag type within each region\n",
-    "long_california['proportion'] = long_california['average_price'] / long_california['total_bag_value']\n",
-    "\n",
-    "print(long_california)"
+    "long_california['proportion'] = long_california['average_price'] / long_california['total_bag_value']"
    ]
   },
   {
@@ -539,18 +502,18 @@
     "\n",
     "#plot type = barplot\n",
     "#x = region\n",
-    "#y = proportion by size\n",
+    "#y = proportion by average hass avocado sales\n",
     "#facet_wrap = avocado type\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "ename": "PlotnineError",
-     "evalue": "'stat_count() must not be used with a y aesthetic'",
+     "evalue": "'stat_bin() must not be used with a y aesthetic.'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
@@ -632,45 +595,21 @@
       "\u001b[1;32m    460\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m:\n",
       "\u001b[0;32m--> 461\u001b[0m         l\u001b[38;5;241m.\u001b[39mcompute_statistic(layout)\n",
       "\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/plotnine/layer.py:284\u001b[0m, in \u001b[0;36mlayer.compute_statistic\u001b[0;34m(self, layout)\u001b[0m\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/plotnine/layer.py:281\u001b[0m, in \u001b[0;36mlayer.compute_statistic\u001b[0;34m(self, layout)\u001b[0m\n",
+      "\u001b[1;32m    278\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(data):\n",
+      "\u001b[1;32m    279\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n",
+      "\u001b[0;32m--> 281\u001b[0m params \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstat\u001b[38;5;241m.\u001b[39msetup_params(data)\n",
       "\u001b[1;32m    282\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstat\u001b[38;5;241m.\u001b[39muse_defaults(data)\n",
       "\u001b[1;32m    283\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstat\u001b[38;5;241m.\u001b[39msetup_data(data)\n",
-      "\u001b[0;32m--> 284\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstat\u001b[38;5;241m.\u001b[39mcompute_layer(data, params, layout)\n",
-      "\u001b[1;32m    285\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m data\n",
       "\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/plotnine/stats/stat.py:308\u001b[0m, in \u001b[0;36mstat.compute_layer\u001b[0;34m(cls, data, params, layout)\u001b[0m\n",
-      "\u001b[1;32m    305\u001b[0m     pscales \u001b[38;5;241m=\u001b[39m layout\u001b[38;5;241m.\u001b[39mget_scales(pdata[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPANEL\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m])\n",
-      "\u001b[1;32m    306\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mcompute_panel(pdata, pscales, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mparams)\n",
-      "\u001b[0;32m--> 308\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m groupby_apply(data, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPANEL\u001b[39m\u001b[38;5;124m\"\u001b[39m, fn)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/plotnine/stats/stat_bin.py:93\u001b[0m, in \u001b[0;36mstat_bin.setup_params\u001b[0;34m(self, data)\u001b[0m\n",
+      "\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m data \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m params:\n",
+      "\u001b[1;32m     92\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstat_bin() must not be used with a y aesthetic.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;32m---> 93\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m PlotnineError(msg)\n",
+      "\u001b[1;32m     95\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclosed\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mright\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mleft\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "\u001b[1;32m     96\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m PlotnineError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`closed` should either \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mright\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m or \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mleft\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/plotnine/_utils/__init__.py:666\u001b[0m, in \u001b[0;36mgroupby_apply\u001b[0;34m(df, cols, func, *args, **kwargs)\u001b[0m\n",
-      "\u001b[1;32m    662\u001b[0m lst \u001b[38;5;241m=\u001b[39m []\n",
-      "\u001b[1;32m    663\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _, d \u001b[38;5;129;01min\u001b[39;00m df\u001b[38;5;241m.\u001b[39mgroupby(cols, observed\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n",
-      "\u001b[1;32m    664\u001b[0m     \u001b[38;5;66;03m# function fn should be free to modify dataframe d, therefore\u001b[39;00m\n",
-      "\u001b[1;32m    665\u001b[0m     \u001b[38;5;66;03m# do not mark d as a slice of df i.e no SettingWithCopyWarning\u001b[39;00m\n",
-      "\u001b[0;32m--> 666\u001b[0m     lst\u001b[38;5;241m.\u001b[39mappend(func(d, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs))\n",
-      "\u001b[1;32m    667\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m pd\u001b[38;5;241m.\u001b[39mconcat(lst, axis\u001b[38;5;241m=\u001b[39maxis, ignore_index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/plotnine/stats/stat.py:306\u001b[0m, in \u001b[0;36mstat.compute_layer.<locals>.fn\u001b[0;34m(pdata)\u001b[0m\n",
-      "\u001b[1;32m    304\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m pdata\n",
-      "\u001b[1;32m    305\u001b[0m pscales \u001b[38;5;241m=\u001b[39m layout\u001b[38;5;241m.\u001b[39mget_scales(pdata[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPANEL\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m])\n",
-      "\u001b[0;32m--> 306\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mcompute_panel(pdata, pscales, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mparams)\n",
-      "\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/plotnine/stats/stat.py:343\u001b[0m, in \u001b[0;36mstat.compute_panel\u001b[0;34m(cls, data, scales, **params)\u001b[0m\n",
-      "\u001b[1;32m    341\u001b[0m stats \u001b[38;5;241m=\u001b[39m []\n",
-      "\u001b[1;32m    342\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _, old \u001b[38;5;129;01min\u001b[39;00m data\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgroup\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
-      "\u001b[0;32m--> 343\u001b[0m     new \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mcompute_group(old, scales, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mparams)\n",
-      "\u001b[1;32m    344\u001b[0m     unique \u001b[38;5;241m=\u001b[39m uniquecols(old)\n",
-      "\u001b[1;32m    345\u001b[0m     missing \u001b[38;5;241m=\u001b[39m unique\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mdifference(new\u001b[38;5;241m.\u001b[39mcolumns)\n",
-      "\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/plotnine/stats/stat_count.py:63\u001b[0m, in \u001b[0;36mstat_count.compute_group\u001b[0;34m(cls, data, scales, **params)\u001b[0m\n",
-      "\u001b[1;32m     61\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m data) \u001b[38;5;129;01mor\u001b[39;00m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m params):\n",
-      "\u001b[1;32m     62\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstat_count() must not be used with a y aesthetic\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;32m---> 63\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m PlotnineError(msg)\n",
-      "\u001b[1;32m     65\u001b[0m weight \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mweight\u001b[39m\u001b[38;5;124m\"\u001b[39m, [\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mlen\u001b[39m(x))\n",
-      "\u001b[1;32m     66\u001b[0m width \u001b[38;5;241m=\u001b[39m params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwidth\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "\n",
-      "\u001b[0;31mPlotnineError\u001b[0m: 'stat_count() must not be used with a y aesthetic'"
+      "\u001b[0;31mPlotnineError\u001b[0m: 'stat_bin() must not be used with a y aesthetic.'"
      ]
     }
    ],
@@ -686,6 +625,13 @@
     "\n",
     "#must be doing something in the data pivoting step wrong b/c it says that all the categories are equal currently\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
