--- a/practice_activities/3.1_function writing/Practice_Activity_Writing_Functions.ipynb
+++ b/practice_activities/3.1_function writing/Practice_Activity_Writing_Functions.ipynb
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "l5CW0nuloYzy"
       },
@@ -67,13 +67,13 @@
       "source": [
         "def times_seven(x):\n",
         "\n",
-        "  if ________:\n",
-        "    exit(________)\n",
+        "  if not isinstance(x, (int, float)):\n",
+        "    exit(\"Need to provide numeric value\")\n",
         "\n",
-        "  if _______:\n",
-        "    print(___)\n",
+        "  if x == 7:\n",
+        "    print(\"I love sevens!\")\n",
         "\n",
-        "  return ______"
+        "  return x * 7"
       ]
     },
     {
@@ -83,6 +83,36 @@
       },
       "source": [
         "2. Write and run some *unit tests* for your `times_seven` function.  What happens if the input to the function is `[1, 3, 5, 7]`?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "345.09999999999997"
+            ]
+          },
+          "execution_count": null,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#times_seven(\"yes\")\n",
+        "#error message sends\n",
+        "\n",
+        "#times_seven([1,3,5,7])\n",
+        "#error message sends\n",
+        "\n",
+        "#times_seven(7)\n",
+        "#works says I love sevens\n",
+        "\n",
+        "#times_seven(49.3)\n",
+        "#works"
       ]
     },
     {
@@ -96,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "id": "V1xGEwq-o5mh"
       },
@@ -111,7 +141,8 @@
         "  else:\n",
         "    exit(\"Please choose `add` or `subtract` as the type.\")\n",
         "\n",
-        "    return res"
+        "    return res\n",
+        "\n"
       ]
     },
     {
@@ -135,17 +166,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "id": "AKN_fkigpHIS"
       },
       "outputs": [],
       "source": [
-        "add_or_subtract(5, 6, type = \"subtract\")\n",
+        "store = add_or_subtract(5, 6, type = \"subtract\")\n",
+        "#shows as none aswell?\n",
         "\n",
-        "add_or_subtract(\"orange\")\n",
+        "#add_or_subtract(\"orange\")\n",
+        "#error\n",
         "\n",
-        "add_or_subtract(5, 6, type = \"multiply\")"
+        "##add_or_subtract(5, 6, type = \"multiply\")\n",
+        "#error defined by function"
       ]
     },
     {
@@ -159,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "G4ImmGWGpekK"
       },
@@ -185,12 +219,16 @@
         "In your Global Environment, what is the value of...\n",
         "\n",
         "a. `first_num`\n",
+        "=5\n",
         "\n",
         "b. `second_num`\n",
+        "=3\n",
         "\n",
         "c. `result`\n",
+        "result showed as none\n",
         "\n",
-        "d. `result_2`"
+        "d. `result_2`\n",
+        "result_2 showed as none"
       ]
     }
   ],
