--- a/labs/lab03/lab_03.ipynb
+++ b/labs/lab03/lab_03.ipynb
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,17 +259,24 @@
     "  if pd.isna(location):\n",
     "    location = \"\"\n",
     "  \n",
+    "  #places the the hyphon with a space from verb if there is one\n",
+    "  if \"-\" in verb:\n",
+    "    verb = verb.replace(\"-\", \" \")\n",
+    "\n",
     "  #if no num is given\n",
     "  #convert string num to num\n",
     "  if pd.isna(num):\n",
     "    num = word_to_num(num_word)\n",
     "\n",
     "  #if no num_word is given\n",
-    "  elif pd.isna(num_word): \n",
-    "    num_word = num2words(num)\n",
+    "  #elif pd.isna(num_word): \n",
+    "    #num_word = num2words(num)\n",
     "\n",
     "  #converts num_word to the actual number rather than the like \"TWELFTH\"\n",
     "  num_word = num2words(num)\n",
+    "\n",
+    "  #capitalize num_word\n",
+    "  num_word = num_word.capitalize()\n",
     "\n",
     "  ## Step 2: If the day number is larger than 1, the gift items need pluralized!\n",
     "  ### Hint: call the function you created above!\n",
@@ -292,6 +299,7 @@
     "  #if location is na, then the adjective is describing the item NOT the location\n",
     "  # location would be \"\" b/c we assigned it that earlier\n",
     "  if location == \"\":\n",
+    "    \n",
     "    #refrenced chat GPT.\n",
     "    #stores all the parts into one list\n",
     "    phrase_parts = [num_word, adjective, item, verb, location]\n",
@@ -309,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -335,25 +343,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "0     a partridge in a pear tree\n",
-       "1               two turtle doves\n",
-       "2              three french hens\n",
-       "3             four calling birds\n",
-       "4              five golden rings\n",
-       "5             six geese a-laying\n",
-       "6         seven swans a-swimming\n",
-       "7          eight maids a-milking\n",
-       "8            nine ladies dancing\n",
-       "9            ten lords a-leaping\n",
-       "10          eleven pipers piping\n",
-       "11      twelve drummers drumming\n",
-       "Name: phrase, dtype: object"
+       "1               Two turtle doves\n",
+       "2              Three french hens\n",
+       "3             Four calling birds\n",
+       "4              Five golden rings\n",
+       "5             Six geese a laying\n",
+       "6         Seven swans a swimming\n",
+       "7          Eight maids a milking\n",
+       "8            Nine ladies dancing\n",
+       "9            Ten lords a leaping\n",
+       "10          Eleven pipers piping\n",
+       "11      Twelve drummers drumming\n",
+       "Name: Full.Phrase, dtype: object"
       ]
      },
      "execution_count": null,
@@ -364,8 +372,8 @@
    "source": [
     "#unit test for xmas dataset\n",
     "\n",
-    "xmas['phrase'] = xmas.apply(lambda x: make_phrase(x['Day'], x['Day.in.Words'], x['Gift.Item'], x['Verb'], x['Adjective'], x['Location']), axis = 1)\n",
-    "xmas['phrase']"
+    "xmas['Full.Phrase'] = xmas.apply(lambda x: make_phrase(x['Day'], x['Day.in.Words'], x['Gift.Item'], x['Verb'], x['Adjective'], x['Location']), axis = 1)\n",
+    "xmas['Full.Phrase']"
    ]
   },
   {
@@ -377,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,11 +412,210 @@
     "  \n",
     "  # Step 2: Sing the gift phrases\n",
     "  # Hint: What order are they gifts sung in each day?\n",
-    "  gifts = \"\"\n",
-    "  for i in len(dataset):\n",
-    "    gifts = gifts + xmas.apply(make_phrase(i['Day'], i['Day.in.Words'], i['Gift.Item'], i['Verb'], i['Adjective'], i['Location']), axis = 1)\n",
+    "\n",
+    "  # use .head so it only stores the desired amount of days\n",
+    "  gifts = dataset[phrase_col].head(num)\n",
+    "  #reverse gifts order\n",
+    "  #refrenced chat GPT\n",
+    "  gifts_reverse = list(reversed(gifts))\n",
+    "\n",
+    "  # Step 3: Put it all together and return\n",
+    "  #store song outside\n",
+    "  song = intro\n",
+    "  for i in range(num):\n",
+    "    #checks if its the last line to add the and\n",
+    "    if(i == num - 1):\n",
+    "      song = song + \"\\n\" + \"and \" + gifts_reverse[i] + \".\"\n",
+    "    else:\n",
+    "      song = song + \"\\n\" + gifts_reverse[i] + \",\"\n",
+    "\n",
+    "  return(song)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On the tenth day of Christmas, my true love sent to me:\n",
+      "Ten lords a leaping,\n",
+      "Nine ladies dancing,\n",
+      "Eight maids a milking,\n",
+      "Seven swans a swimming,\n",
+      "Six geese a laying,\n",
+      "Five golden rings,\n",
+      "Four calling birds,\n",
+      "Three french hens,\n",
+      "Two turtle doves,\n",
+      "and a partridge in a pear tree.\n",
+      "On the tenth day of Christmas, my true love sent to me:\n",
+      "Ten lords a leaping,\n",
+      "Nine ladies dancing,\n",
+      "Eight maids a milking,\n",
+      "Seven swans a swimming,\n",
+      "Six geese a laying,\n",
+      "Five golden rings,\n",
+      "Four calling birds,\n",
+      "Three french hens,\n",
+      "Two turtle doves,\n",
+      "and a partridge in a pear tree.\n"
+     ]
+    }
+   ],
+   "source": [
+    "store = sing_day(xmas, 10, \"Full.Phrase\")\n",
+    "\n",
+    "print(store)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Here is an improved version of the sing_day function that doesn't need the col name and instead using the phrase function to make the song!**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#here is an improv\n",
+    "def sing_day_improved(dataset, num):\n",
+    "\n",
+    "  \"\"\"\n",
+    "  Returns a phrase\n",
     "  \n",
-    "  # Step 3: Put it all together and return"
+    "  Parameters\n",
+    "  ----------\n",
+    "  dataset: dat\n",
+    "  num: num\n",
+    "  phrase_col: str\n",
+    "    \n",
+    "  Return\n",
+    "  ------\n",
+    "  full_phrase: str\n",
+    "  \"\"\"\n",
+    "  \n",
+    "  # Step 1: Setup the intro line\n",
+    "  # convert \"1\" to \"first\" etc.\n",
+    "  num_word = num2words(num, to='ordinal')\n",
+    "  intro = \"On the \" + num_word + \" day of Christmas, my true love sent to me:\"\n",
+    "  \n",
+    "  # Step 2: Sing the gift phrases\n",
+    "  # Hint: What order are they gifts sung in each day?\n",
+    "  #store gifts str\n",
+    "  gifts = \"\"\n",
+    "  #heres where it makes it so you don't even need the phrase col :)\n",
+    "  #use .head so it only stores the desired amount of days\n",
+    "  gifts = gifts + dataset.head(num).apply(lambda x: make_phrase(x['Day'], x['Day.in.Words'], x['Gift.Item'], x['Verb'], x['Adjective'], x['Location']), axis = 1)\n",
+    "  \n",
+    "  #reverse gifts order\n",
+    "  #refrenced chat GPT\n",
+    "  gifts_reverse = list(reversed(gifts))\n",
+    "\n",
+    "  # Step 3: Put it all together and return\n",
+    "  #store song outside\n",
+    "  song = intro\n",
+    "  for i in range(num):\n",
+    "    #checks if its the last line to add the and\n",
+    "    if(i == num - 1):\n",
+    "      #line for last line of song\n",
+    "      song = song + \"\\n\" + \"and \" + gifts_reverse[i] + \".\"\n",
+    "    else:\n",
+    "      #line for every other line except first and last\n",
+    "      song = song + \"\\n\" + gifts_reverse[i] + \",\"\n",
+    "\n",
+    "  return(song)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On the tenth day of Christmas, my true love sent to me:\n",
+      "Ten lords a leaping,\n",
+      "Nine ladies dancing,\n",
+      "Eight maids a milking,\n",
+      "Seven swans a swimming,\n",
+      "Six geese a laying,\n",
+      "Five golden rings,\n",
+      "Four calling birds,\n",
+      "Three french hens,\n",
+      "Two turtle doves,\n",
+      "and a partridge in a pear tree.\n",
+      "On the tenth day of Christmas, my true love sent to me:\n",
+      "Ten lords a leaping,\n",
+      "Nine ladies dancing,\n",
+      "Eight maids a milking,\n",
+      "Seven swans a swimming,\n",
+      "Six geese a laying,\n",
+      "Five golden rings,\n",
+      "Four calling birds,\n",
+      "Three french hens,\n",
+      "Two turtle doves,\n",
+      "and a partridge in a pear tree.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#unit test 1\n",
+    "store = sing_day_improved(xmas, 10)\n",
+    "\n",
+    "print(store)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On the tenth day of Christmas, my true love sent to me:\n",
+      "Ten loads of laundry,\n",
+      "Nine parties bumping,\n",
+      "Eight moms a calling,\n",
+      "Seven seniors stressing,\n",
+      "Six graders grading,\n",
+      "Five practice exams,\n",
+      "Four course reviews,\n",
+      "Three lost pens,\n",
+      "Two meal points,\n",
+      "and an email from Cal Poly.\n",
+      "On the tenth day of Christmas, my true love sent to me:\n",
+      "Ten loads of laundry,\n",
+      "Nine parties bumping,\n",
+      "Eight moms a calling,\n",
+      "Seven seniors stressing,\n",
+      "Six graders grading,\n",
+      "Five practice exams,\n",
+      "Four course reviews,\n",
+      "Three lost pens,\n",
+      "Two meal points,\n",
+      "and an email from Cal Poly.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#unit test 2 using xmas2 dataset\n",
+    "xmas2 = pd.read_csv(\"https://www.dropbox.com/scl/fi/p9x9k8xwuzs9rhp582vfy/xmas_2.csv?rlkey=kvc3j3lmyn4opcidsrhcmrof1&dl=1\")\n",
+    "\n",
+    "test2 = sing_day_improved(xmas2, 10)\n",
+    "\n",
+    "print(test2)"
    ]
   }
  ],
