--- a/labs/lab03/lab_03.ipynb
+++ b/labs/lab03/lab_03.ipynb
@@ -53,31 +53,20 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'rings'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#test\n",
-    "obj_1 = \"goose\"\n",
-    "obj_2 = \"lady\"\n",
-    "obj_3 = \"ring\"\n",
+    "#basic tests\n",
+    "#obj_1 = \"goose\"\n",
+    "#obj_2 = \"lady\"\n",
+    "#obj_3 = \"ring\"\n",
     "\n",
-    "obj_1.find(\"oo\")\n",
-    "obj_2[-1]\n",
-    "obj_3.find(\"oo\")\n",
+    "#obj_1.find(\"oo\")\n",
+    "#obj_2[-1]\n",
+    "#obj_3.find(\"oo\")\n",
     "\n",
-    "obj_1.replace(\"oo\", \"ee\")\n",
-    "obj_2.replace(\"y\", \"ies\")\n",
-    "obj_3 + \"s\"\n"
+    "#obj_1.replace(\"oo\", \"ee\")\n",
+    "#obj_2.replace(\"y\", \"ies\")\n",
+    "#obj_3 + \"s\"\n"
    ]
   },
   {
@@ -117,6 +106,13 @@
     "    gift = gift + \"s\"\n",
     "\n",
     "  return gift\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Unit Test For Function 1**"
    ]
   },
   {
@@ -177,9 +173,20 @@
    "outputs": [],
    "source": [
     "#function that converts word to numeric val\n",
-    "\n",
     "def word_to_num(num):\n",
+    "\n",
+    "  \"\"\"\n",
+    "  Returns a phrase\n",
+    "  \n",
+    "  Parameters\n",
+    "  ----------\n",
+    "  num: num\n",
     "    \n",
+    "  Return\n",
+    "  ------\n",
+    "  word: str\n",
+    "  \"\"\"\n",
+    "\n",
     "  map = {\n",
     "      \"zero\": 0,\n",
     "      \"one\": 1,\n",
@@ -205,21 +212,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#unit test for word to num\n",
-    "word_to_num(\"twelve\")"
+    "#unit test of word_to_num function, works\n",
+    "#word_to_num(\"twelve\")"
    ]
   },
   {
@@ -291,9 +287,7 @@
     "      num_word = \"an\"\n",
     "    else:\n",
     "      num_word = \"a\"\n",
-    "\n",
-    "\n",
-    "  \n",
+    " \n",
     "  ## Step 5: Put all of the pieces together into one string and return!\n",
     "\n",
     "  #if location is na, then the adjective is describing the item NOT the location\n",
@@ -316,29 +310,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Unit Tests for Function 2**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'a goose in a pear tree'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#unit test\n",
-    "make_phrase(num = 1,\n",
-    "            num_word = pd.NA,\n",
-    "            item = \"goose\",\n",
-    "            verb = \"in a\",\n",
-    "            adjective = \"pear\",\n",
-    "            location = \"tree\")"
+    "#unit test, works\n",
+    "#make_phrase(num = 1, num_word = pd.NA, item = \"goose\", verb = \"in a\", adjective = \"pear\", location = \"tree\")"
    ]
   },
   {
@@ -370,8 +355,7 @@
     }
    ],
    "source": [
-    "#unit test for xmas dataset\n",
-    "\n",
+    "#unit test for xmas dataset, works\n",
     "xmas['Full.Phrase'] = xmas.apply(lambda x: make_phrase(x['Day'], x['Day.in.Words'], x['Gift.Item'], x['Verb'], x['Adjective'], x['Location']), axis = 1)\n",
     "xmas['Full.Phrase']"
    ]
@@ -433,6 +417,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Unit Test for Function 3**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -467,9 +458,10 @@
     }
    ],
    "source": [
-    "store = sing_day(xmas, 10, \"Full.Phrase\")\n",
+    "#unit test, works\n",
+    "test = sing_day(xmas, 10, \"Full.Phrase\")\n",
     "\n",
-    "print(store)\n"
+    "print(test)\n"
    ]
   },
   {
@@ -569,10 +561,10 @@
     }
    ],
    "source": [
-    "#unit test 1\n",
-    "store = sing_day_improved(xmas, 10)\n",
+    "#unit test 1, works\n",
+    "test1 = sing_day_improved(xmas, 10)\n",
     "\n",
-    "print(store)\n"
+    "print(test1)\n"
    ]
   },
   {
@@ -610,7 +602,7 @@
     }
    ],
    "source": [
-    "#unit test 2 using xmas2 dataset\n",
+    "#unit test 2 using xmas2 dataset, works\n",
     "xmas2 = pd.read_csv(\"https://www.dropbox.com/scl/fi/p9x9k8xwuzs9rhp582vfy/xmas_2.csv?rlkey=kvc3j3lmyn4opcidsrhcmrof1&dl=1\")\n",
     "\n",
     "test2 = sing_day_improved(xmas2, 10)\n",
