--- a/labs/lab03/lab_03.ipynb
+++ b/labs/lab03/lab_03.ipynb
@@ -176,7 +176,7 @@
     "def word_to_num(num):\n",
     "\n",
     "  \"\"\"\n",
-    "  Returns a phrase\n",
+    "  Returns a word\n",
     "  \n",
     "  Parameters\n",
     "  ----------\n",
@@ -487,7 +487,6 @@
     "  ----------\n",
     "  dataset: dat\n",
     "  num: num\n",
-    "  phrase_col: str\n",
     "    \n",
     "  Return\n",
     "  ------\n",
