day08 notes and practice activity 4.1

--- a/class_practice/day07.ipynb
+++ b/class_practice/day07.ipynb
@@ -3831,9 +3831,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'table' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
+      "Cell \u001b[0;32mIn[1], line 7\u001b[0m\n",
+      "\u001b[1;32m      4\u001b[0m rows \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# iterate over all rows in the city table\u001b[39;00m\n",
+      "\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m city \u001b[38;5;129;01min\u001b[39;00m table\u001b[38;5;241m.\u001b[39mfind_all(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtr\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m1\u001b[39m:]:\n",
+      "\u001b[1;32m      8\u001b[0m \n",
+      "\u001b[1;32m      9\u001b[0m     \u001b[38;5;66;03m# Get all the cells (<td>) in the row.\u001b[39;00m\n",
+      "\u001b[1;32m     10\u001b[0m     cells \u001b[38;5;241m=\u001b[39m city\u001b[38;5;241m.\u001b[39mfind_all(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtd\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;32m     12\u001b[0m     \u001b[38;5;66;03m# The information we need is the text between tags.\u001b[39;00m\n",
+      "\u001b[1;32m     13\u001b[0m \n",
+      "\u001b[1;32m     14\u001b[0m     \u001b[38;5;66;03m# Find the the name of the city in cell[0]\u001b[39;00m\n",
+      "\u001b[1;32m     15\u001b[0m     \u001b[38;5;66;03m# which for most city is contained in the <a> tag\u001b[39;00m\n",
+      "\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'table' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#turn html into actual dataframe\n",
     "\n",
